# impala-udf

./: CMakeLists.txt  README.md  build.sh  uda-my.cc  uda-my.h  udf-my.cc  udf-my.h
